# NetSurveillancePP-tests

./: .gitmodules  CMakeLists.txt
Lib/: CMakeLists.txt
Tests/: .gitignore  00-SofiaHash.cpp  01-ConnectAndLogin.cpp  02-EnumChannelNames.cpp  03-CapturePicture.cpp  04-MonitorAlarms.cpp  05-ReceiveConfig.cpp  06-ReceiveSysInfo.cpp  07-ReceiveAbility.cpp  08-ParseRawCapturedStream.cpp  09-SaveCapturedStreamRaw.cpp  10-SaveRemotePlaybackRaw.cpp  CMakeLists.txt  ChannelLiveVideoTcpGateway.cpp  Nvr.lua  NvrUtils.lua  R00-ConnectAndLogin.lua  R01-ConnectAndLoginTwice.lua  R02-EnumChannelTitles.lua  R03-EnumChannelTitlesNoLogin.lua  R04-MonitorClaim.lua  R05-HttpRequest.lua  R06-RequestCurrentPicture.lua  R07-LogAlarms.lua  R08-Backdoors.lua  R09-ManySnapshots.lua  R10-SessionHijack.lua  R11-SessionFlood.lua  R12-SysInfoWithLogin.lua  R13-SysInfoWithoutLogin.lua  R14-FileSearch.lua  R15-DownloadShortLive.lua  R16-RemotePlayback.lua  RealDeviceConfig.Sample.lua  SimpleSimulator.lua  SimpleSimulatorDriver.lua  Utils.lua
